chore: remove migration